# hi-ml

./: .amlignore  .amltignore  .codecov.yml  .coveragerc  .flake8  .git-blame-ignore-revs  .gitignore  .isort.cfg  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  build.sh  build_requirements.txt  config.yml  conftest.py  create_and_lock_environment.sh  create_config.sh  dev_environment.yml  download_upload_checkpoints.py  environment.yml  hello_world.yml  hi-ml-all.code-workspace  himl-projects.code-workspace  hubconf.py  mypy.ini  mypy_runner.py  new_config.json  package_description.md  pull_request_template.md  pyproject.toml  pyrightconfig.json  pytest.ini  readthedocs_requirements.txt  run_requirements.txt  runner.py  runtime.txt  setup.py  setup.sh  (+2 more)
hi-ml-multimodal/: .bumpversion.cfg  .flake8  .mypy.ini  .pylintrc  MANIFEST.in  Makefile  README.md  environment.yml  package_description.md  pyrightconfig.json  pytest.ini  requirements_build.txt  requirements_run.txt  requirements_test.txt  setup.cfg  setup.py
hi-ml-multimodal/notebooks/: biovil_chexpert.csv  eval.py  phrase_grounding.ipynb  utils.py  zero_shot.ipynb  zero_shot.py
hi-ml-multimodal/src/health_multimodal/: __init__.py
hi-ml-multimodal/src/health_multimodal/common/: __init__.py  device.py  visualization.py
hi-ml-multimodal/src/health_multimodal/image/: __init__.py  inference_engine.py  utils.py
hi-ml-multimodal/src/health_multimodal/text/: __init__.py  inference_engine.py  (+1 more)
hi-ml-multimodal/test_multimodal/common/: test_visualization.py
hi-ml-multimodal/test_multimodal/image/: test_image_inference_engine.py  test_inference_engine.py
hi-ml-multimodal/test_multimodal/text/: test_inference_engine.py
hi-ml-multimodal/test_multimodal/vlp/: test_vlp_inference_engine.py  test_zero_shot_classification.py
(+1114 files in other folders)
