[metadata]
name = hi-ml-multimodal
version = 0.1.2
author = Biomedical Imaging Team @ Microsoft Health Futures
author_email = innereyedev@microsoft.com
url = https://github.com/microsoft/hi-ml
description = Microsoft Health Futures package to work with multi-modal health data
long_description = file: README.md
long_description_content_type = text/markdown
license_file = MIT License
platforms = OS Independent
classifiers =
    Intended Audience :: Science/Research
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Image Processing
    Topic :: Scientific/Engineering :: Medical Science Apps.
    Typing :: Typed
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License

[options]
install_requires =
    huggingface-hub
    matplotlib
    pillow
    pydicom
    scikit-image
    SimpleITK
    torch
    torchvision
    transformers
python_requires = >=3.10,<3.11
include_package_data = True
zip_safe = False

[options.packages.find]
where = src

[options.extras_require]
dev =
    %(build)s
    %(test)s
    bump2version
    pre-commit
build =
    docutils
    myst-parser
    sphinx
    sphinx-autodoc-typehints
    sphinx-automodapi
    sphinx-rtd-theme
    twine
test =
    coverage
    flake8
    ipykernel
    ipython
    mypy
    papermill
    pycobertura
    pytest
    pytest-cov
    pytest-rerunfailures
    pytest-timeout

[bdist_wheel]
universal = 1
